refactor: user-service 리팩토링

--- a/be/user-service/build.gradle
+++ b/be/user-service/build.gradle
@@ -24,13 +24,23 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// Common Module
+	implementation project(':common-module')
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// MySQL
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	// Spring Data JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 tasks.named('test') {
