refactor: question command-service 리팩토링

--- a/be/post-command-service/build.gradle
+++ b/be/post-command-service/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+	// common-module
+	implementation project(':common-module')
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// Lombok
