--- a/be/post-command-service/settings.gradle
+++ b/be/post-command-service/settings.gradle
@@ -1,1 +1,4 @@
 rootProject.name = 'post-command-service'
+
+include(":common-module")
+findProject(":common-module").projectDir = file("../common-module")
