--- a/be/zzuag/zzuag-domain/build.gradle
+++ b/be/zzuag/zzuag-domain/build.gradle
@@ -5,6 +5,9 @@ plugins {
 group = 'com.recycle'
 version = '0.0.1-SNAPSHOT'
 
+bootJar {enabled = false}
+jar {enabled = true}
+
 repositories {
     mavenCentral()
 }
